# public/api-docs/models/openapi.yaml
@@ -216,29 +216,28 @@ paths:
           $ref: '#/components/responses/Response_400'
         '401':
           $ref: '#/components/responses/Response_401'
-#        '403':
-#          $ref: '#/components/responses/Response_403'
+          #        '403':
+          #          $ref: '#/components/responses/Response_403'
         '404':
-          $ref: '#/components/responses/Response_404'
+            $ref: '#/components/responses/Response_404'
         '412':
-          $ref: '#/components/responses/Response_412'
-    delete:
-      tags:
-        - '👥 Users'
-      summary: Removes the User resource.
-      description: Deletes the user identified by `userId`.
-      operationId: api_users_delete
-      security:
-        - MiWApiSecurity: [ writer ]
-      responses:
-        '204':
-          description: User deleted &lt;Response body is empty&gt;
-        '401':
-          $ref: '#/components/responses/Response_401'
-#        '403':
-#          $ref: '#/components/responses/Response_403'
-        '404':
-          $ref: '#/components/responses/Response_404'
+            $ref: '#/components/responses/Response_412'
+            delete:
+              tags:
+                - '👥 Users'
+              summary: Removes the User resource.
+              description: Deletes the user identified by `userId`.
+              operationId: api_users_delete
+              security:
+                - MiWApiSecurity: [ writer ]
+              responses:
+                '204':
+                  description: User deleted &lt;Response body is empty&gt;
+                '401':
+                  $ref: '#/components/responses/Response_401'
+          #        '403':
+          #          $ref: '#/components/responses/Response_403'
+      
     options:
       tags:
         - '👥 Users'
@@ -668,7 +667,7 @@ paths:
         - '🏭 Entity'
       summary: Removes the Entity resource.
       description: Deletes the entity identified by `entitytId`.
-      operationId: deleteentity
+      operationId: deleteEntity
       security:
         - MiWApiSecurity: [ writer ]
       responses:
@@ -812,6 +811,267 @@ paths:
           $ref: '#/components/responses/Response_404'
         '406':
           $ref: '#/components/responses/Response_406'
+
+  /persons:
+      get:
+          tags:
+            - '👨‍💼 Person'
+          summary: Retrieves the collection of Person resources.
+          description: Returns all Person from the system that the user has access to.
+          operationId: readPersons
+          # security:
+          #   - MiWApiSecurity: [ reader ]
+          parameters:
+            - $ref: '#/components/parameters/orderParam'
+            - $ref: '#/components/parameters/orderingParam'
+          responses:
+            '200':
+              description: Array of persons
+              content:
+                application/json:
+                  schema:
+                    type: object
+                    properties:
+                      products:
+                        description: Persons array
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/Person'
+              headers:
+                ETag:
+                  $ref: '#/components/headers/ETag'
+            '404':
+              $ref: '#/components/responses/Response_404'
+      post:
+          tags:
+             - '👨‍💼 Person'
+          summary: Creates a Person resource.
+          description: Creates a new person
+          operationId: createPerson
+          security:
+            - MiWApiSecurity: [ writer ]
+          requestBody:
+            $ref: '#/components/requestBodies/ElementRequestBody'
+          responses:
+            '201':
+              description: '`Created`: person created'
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/Person'
+              headers:
+                Location:
+                  $ref: '#/components/headers/Location'
+            '400':
+              $ref: '#/components/responses/Response_400'
+            '401':
+              $ref: '#/components/responses/Response_401'
+            '403':
+              $ref: '#/components/responses/Response_403'
+            '422':
+              $ref: '#/components/responses/Response_422'
+  '/persons/{personId}':
+    parameters:
+      - $ref: '#/components/parameters/personId'
+    get:
+      tags:
+        - '👨‍💼 Person'
+      summary: Retrieves a Person resource based on a single ID.
+      description: Returns the person identified by `personId`.
+      operationId: readPerson
+      # security:
+      #   - MiWApiSecurity: [ reader ]
+      responses:
+        '200':
+          description: Person
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Person'
+          headers:
+            ETag:
+              $ref: '#/components/headers/ETag'
+        '404':
+          $ref: '#/components/responses/Response_404'
+    put:
+      tags:
+        - '👨‍💼 Person'
+      summary: Updates the Person resource.
+      description: Updates the person identified by `epersonId`.
+      operationId: updatePerson
+      security:
+        - MiWApiSecurity: [ writer ]
+      requestBody:
+        $ref: '#/components/requestBodies/ElementRequestBody'
+      parameters:
+        - $ref: '#/components/parameters/ifMatchParam'
+      responses:
+        '209':
+          description: '`Content Returned`: person previously existed and is now updated'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Person'
+        '400':
+          $ref: '#/components/responses/Response_400'
+        '401':
+          $ref: '#/components/responses/Response_401'
+        # '403':
+        #  $ref: '#/components/responses/Response_403'
+        '404':
+          $ref: '#/components/responses/Response_404'
+        '412':
+          $ref: '#/components/responses/Response_412'
+    delete:
+      tags:
+        - '👨‍💼 Person'
+      summary: Removes the Person resource.
+      description: Deletes the person identified by `personId`.
+      operationId: deletePerson
+      security:
+        - MiWApiSecurity: [ writer ]
+      responses:
+        '204':
+          description: Person deleted &lt;Response body is empty&gt;
+        '401':
+          $ref: '#/components/responses/Response_401'
+        # '403':
+        #   $ref: '#/components/responses/Response_403'
+        '404':
+          $ref: '#/components/responses/Response_404'
+  '/persons/personname/{personname}':
+    get:
+      tags:
+        - '👨‍💼 Person'
+      summary: Determines if personname exists
+      description: Returns status code 204 if `persontname` exists.
+      operationId: existsPerson
+      parameters:
+        - $ref: '#/components/parameters/personName'
+      responses:
+        '204':
+          description: Personname exists &lt;Response body is empty&gt;
+        '404':
+          $ref: '#/components/responses/Response_404'
+  '/persons/{personId}/products':
+    get:
+      tags:
+        - '👨‍💼 Person'
+      summary: List of products related to the person
+      description: Returns the products related to the person `personId`
+      operationId: readPersonProducts
+      # security:
+      #   - MiWApiSecurity: [ reader ]
+      parameters:
+        - $ref: '#/components/parameters/personId'
+      responses:
+        '200':
+          description: Array of Products
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  products:
+                    description: Products array
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Person'
+          headers:
+            ETag:
+              $ref: '#/components/headers/ETag'
+         # '401':
+         #   $ref: '#/components/responses/Response_401'
+        '404':
+          $ref: '#/components/responses/Response_404'
+  '/persons/{personId}/entities':
+    get:
+      tags:
+        - '👨‍💼 Person'
+      summary: List of entities related to the person
+      description: Returns the entities related to the person `personId`
+      operationId: readPersonEntities
+      # security:
+      #   - MiWApiSecurity: [ reader ]
+      parameters:
+        - $ref: '#/components/parameters/personId'
+      responses:
+        '200':
+          description: Array of Entities
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  persons:
+                    description: Entities array
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Entity'
+          headers:
+            ETag:
+              $ref: '#/components/headers/ETag'
+        # '401':
+        #   $ref: '#/components/responses/Response_401'
+        '404':
+          $ref: '#/components/responses/Response_404'
+  '/persons/{personId}/products/{operation}/{productId}':
+    put:
+      tags:
+        - '👨‍💼 Person'
+      summary: Sets or remove the relationship person-product
+      description: Establishes/Removes the relationship of the person with the product
+      operationId: api_persons_add_rem_product
+      security:
+        - MiWApiSecurity: [ writer ]
+      parameters:
+        - $ref: '#/components/parameters/productId'
+        - $ref: '#/components/parameters/operationParam'
+        - $ref: '#/components/parameters/personId'
+      responses:
+        '209':
+          description: '`Content Returned`: person is now updated'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Person'
+        '401':
+          $ref: '#/components/responses/Response_401'
+        '403':
+          $ref: '#/components/responses/Response_403'
+        '404':
+          $ref: '#/components/responses/Response_404'
+        '406':
+          $ref: '#/components/responses/Response_406'
+  '/persons/{personId}/entities/{operation}/{entityId}':
+    put:
+      tags:
+          - '👨‍💼 Person'
+      summary: Sets or remove the relationship person-entity
+      description: Establishes/Removes the relationship of the person with the entity
+      operationId: api_person_add_rem_entity
+      security:
+        - MiWApiSecurity: [ writer ]
+      parameters:
+        - $ref: '#/components/parameters/personId'
+        - $ref: '#/components/parameters/operationParam'
+        - $ref: '#/components/parameters/entityId'
+      responses:
+        '209':
+          description: '`Content Returned`: person is now updated'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/person'
+        '401':
+          $ref: '#/components/responses/Response_401'
+        '403':
+          $ref: '#/components/responses/Response_403'
+        '404':
+          $ref: '#/components/responses/Response_404'
+        '406':
+          $ref: '#/components/responses/Response_406'
+
 
 components:
   schemas:
@@ -1200,6 +1460,22 @@ components:
       name: productname
       in: path
       description: Product name
+      required: true
+      schema:
+        type: string
+        pattern: '^[a-zA-Z0-9()áéíóúÁÉÍÓÚñÑ %$\.+-]+$'
+    entityName:
+      name: entityname
+      in: path
+      description: Entity name
+      required: true
+      schema:
+        type: string
+        pattern: '^[a-zA-Z0-9()áéíóúÁÉÍÓÚñÑ %$\.+-]+$'
+    personName:
+      name: personname
+      in: path
+      description: Person name
       required: true
       schema:
         type: string
